--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
 			</div>
 			<!-- 로그인 영역 -->
 			<div>
-				<a href="#">
+				<a href="/user/sign-in-view">
 					<h4>로그인</h4>
 				</a>
 			</div>
