--- a/src/main/resources/templates/user/signIn.html
+++ b/src/main/resources/templates/user/signIn.html
@@ -9,11 +9,10 @@
 		<form method="post" action="#">
 			<div class="sign-in-box">
 				<h1 class="mb-5">로그인</h1>
-				<input type="text" name="id" class="form-control mb-2"
-					placeholder="아이디를 입력하세요"> <input type="password"
-					name="password" class="form-control mb-5" placeholder="비밀번호를 입력하세요">
+				<input type="text" name="id" class="form-control mb-2" placeholder="아이디를 입력하세요">
+				<input type="password" name="password" class="form-control mb-4" placeholder="비밀번호를 입력하세요">
 				<button type="submit" class="btn btn-warning w-100 mb-2 btn-type-a">로그인</button>
-				<button type="button" class="btn btn-primary w-100 btn-type-a">회원가입</button>
+				<button type="button" id="goToSignUpBtn" class="btn btn-primary w-100 btn-type-a">회원가입</button>
 			</div>
 		</form>
 	</div>
@@ -22,7 +21,12 @@
 <!-- defaultLayout의 script 부분에 들어감 -->
 <th:block layout:fragment="script">
 	<script>
-		
+		$(document).ready(function(){
+			$("#goToSignUpBtn").on('click', function() {
+				location.href = '/user/sign-up-view';
+			}) // 회원가입 화면으로 이동
+			
+		}); //-- ready
 	</script>
 </th:block>
 
