--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -6,7 +6,7 @@
 
 <!-- defaultLayout의 content 부분에 들어가게 됨 -->
 <section layout:fragment="content" class="contents x-center">
-	<div class="w-50 py-5">
+	<div class="py-5 post-list">
 		<h1>글목록</h1>
 		
 		<table class="table">
@@ -21,7 +21,8 @@
 			<tbody>
 				<tr th:each="post : ${postList}">
 					<td th:text="${post.id}">1</td>
-					<td th:text="${post.subject}">어떤제목</td>
+					<!-- <td><a th:href="@{/post/post-detail-view(postId=${post.id})}" th:text="${post.subject}">임시제목</a></td> -->
+					<td><a th:href="|/post/post-detail-view?postId=${post.id}|" th:text="${post.subject}">임시제목</a></td>
 					<td th:text="${#temporals.format(post.createdAt, 'yyyy년 M월 d일')}">20XX-XX-XX</td>
 					<td th:text="${#temporals.format(post.updatedAt, 'yyyy년 M월 d일')}">20XX-XX-XX</td>
 				</tr>
