글 삭제 구현하기, 이미지가 있는 게시글은 이미지도 삭제(디렉토리까지)

--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -25,7 +25,7 @@
 			
 			<div>
 				<a href="/post/post-list-view" type="button" class="btn btn-dark">목록</a>
-				<button type="button" id="saveBtn" class="btn btn-primary">수정</button>
+				<button type="button" id="saveBtn" class="btn btn-primary" th:data-post-id="${post.id}">수정</button>
 			</div>
 		</div>
 	</div>
@@ -34,7 +34,71 @@
 <!-- defaultLayout: script -->
 <th:block layout:fragment="script">
 	<script>
-		
+		$(document).ready(function() {
+			
+			// 글 쓰기 버튼
+			$('#saveBtn').on('click', function() {
+				let postId = $(this).data('post-id');
+				let subject = $('#subject').val().trim();
+				let content = $('#content').val();
+				let fileName = $('#file').val(); // C:\fakepath\magic-dog.jpg => 임시경로를 이름으로 저장됨 (진짜 파일X)
+
+				// validation
+				if (!subject) {
+					alert("제목을 입력하세요");
+					return;
+				}
+				if (!content) {
+					alert("내용을 입력하세요");
+					return;
+				}
+				
+				// 파일명이 비워져 있지 않으면 => 확장자 체크
+				if (fileName) {
+					// C:\fakepath\castle.jpg
+					let extension = fileName.split(".").pop().toLowerCase();
+					
+					if ($.inArray(extension, ["jpg", "gif", "png"]) == -1) {
+						alert("이미지 파일만 업로드 할 수 있습니다.");
+						$('#file').val(""); // 파일 비우기
+						return;
+					}					
+				}
+
+				// form태그를 js에서 만든다.
+				// 이미지 업로드 시 <form> 반드시 필요
+				let formData = new FormData();
+				formData.append("postId", postId);
+				formData.append("subject", subject); // key는 name 속성과 같고 Reqeust Param 명
+				formData.append("content", content);
+				formData.append("file", $('#file')[0].files[0]);
+				
+				// AJAX
+				$.ajax({
+					// request
+					type:"put" //-- file이 커서 get으로는 보내면 안됨
+					, url:"/post/update"
+					, data:formData //-- form을 통째로 넘김
+					, enctype:"multipart/form-data" //-- file 업로드 시 필수설정
+					, processData:false //-- file 업로드 시 필수설정
+					, contentType:false //-- file 업로드 시 필수설정
+					
+					// response
+					, success:function(data) {
+						if (data.code == 200) {
+							alert("수정되었습니다");
+							location.reload();
+						} else {
+							alert(data.error_message);
+						}
+					}
+					, error:function(error) {
+						alert("AJAX ERROR : 글 수정 실패");
+					}
+				});
+				
+			}) //-- 글쓰기
+		}); //-- ready
 	</script>
 </th:block>
 
