--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="d-flex justify-content-between">
-			<button type="button" id="deleteBtn" class="btn btn-secondary">삭제</button>
+			<button type="button" id="deleteBtn" class="btn btn-secondary" th:data-post-id="${post.id}">삭제</button>
 			
 			<div>
 				<a href="/post/post-list-view" type="button" class="btn btn-dark">목록</a>
@@ -36,7 +36,7 @@
 	<script>
 		$(document).ready(function() {
 			
-			// 글 쓰기 버튼
+			// 글 수정 버튼
 			$('#saveBtn').on('click', function() {
 				let postId = $(this).data('post-id');
 				let subject = $('#subject').val().trim();
@@ -96,8 +96,30 @@
 						alert("AJAX ERROR : 글 수정 실패");
 					}
 				});
+			}) //-- 글 수정 버튼
+			
+			// 글 삭제 버튼
+			$("#deleteBtn").on('click', function(e) {
+				let postId = $(this).data("post-id");
 				
-			}) //-- 글쓰기
+				$.ajax({
+					url:"/post/delete"
+					, type:"delete"
+					, data:{"postId":postId}
+					, success:function(data) {
+						if (data.code == 200) {
+							alert("삭제되었습니다.");
+							location.href = "/post/post-list-view";						
+						}
+					}
+					, error:function(e) {
+						alert("AJAX ERROR : 글 삭제 실패");
+					}
+					
+				}); //-- ajax 요청
+			}); //-- 글 삭제 버튼
+			
+			
 		}); //-- ready
 	</script>
 </th:block>
