--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -29,6 +29,12 @@
 			</tbody>
 		</table>
 		
+		<!-- 페이징 -->
+		<div class="text-center">
+			<a th:if="${prevId != 0}" th:href="|/post/post-list-view?prevId=${prevId}|" class="mr-4">&lt;&lt;이전</a>
+			<a th:if="${nextId != 0}" th:href="'/post/post-list-view?nextId=' + ${nextId}" class="ml-4">다음&gt;&gt;</a>
+		</div>
+		
 		<!-- 글쓰기 버튼 -->
 		<div class="d-flex justify-content-end">
 			<a href="/post/post-create-view" class="btn btn-warning btn-type-a">글쓰기</a>
